Change the note about the translation to become jekyll-generated
This now makes use of the metadata on the translation from each page.

--- a/se-eucw.html
+++ b/se-eucw.html
@@ -1,5 +1,6 @@
 ---
 translated: 2007-05-14
+originalhref: eucw.html
 ---
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <HTML>
@@ -455,14 +456,7 @@ given tidsperiod.
 <HR>
 <A href="se-index.html">Tillbaka</A> till EUCWs startsida <BR>
 
-<TABLE WIDTH="100%">
-  <TR>
-    <TD colspan="2">
-     <IFRAME src="svdisc.html" width="100%">
-    </TD>
-  </TR>
-</TABLE>
-
+{% include translated.html %}
 </BODY>
 </HTML>
 
