--- a/se-eucwh.html
+++ b/se-eucwh.html
@@ -1,5 +1,6 @@
 ---
 translated: 2007-05-14
+originalhref: eucwh.html
 ---
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
@@ -313,14 +314,7 @@ G4FAI
 (i kronologisk ordning).
 </p>
 
-<TABLE WIDTH="100%">
-  <TR>
-    <TD colspan="2">
-     <IFRAME src="svdisc.html" width="100%">
-    </TD>
-  </TR>
-</TABLE>
-
+{% include translated.html %}
 </body>
 </html>
 
