--- a/se-euqrs.html
+++ b/se-euqrs.html
@@ -1,6 +1,6 @@
 ---
-priority: 9
 translated: 2024-03-16
+originalhref: euqrs.html
 ---
 <html>
 <head>
@@ -309,5 +309,7 @@ stationerna.</p>
 </p>
 <P>
 EUCWs QRS-vecka sponsras och organiseras av AGCW-DL.
+<a href="https://eucw.org/dp.pdf"><FONT size="-2">Integritetspolicy (ej översatt)</FONT></a>
+{% include translated.html %}
 </body>
-<a href="https://eucw.org/dp.pdf"><FONT size="-2">Integritetspolicy (ej översatt)</FONT></a></html>
+</html>
