--- a/se-fists.html
+++ b/se-fists.html
@@ -1,5 +1,6 @@
 ---
 translated: 2007-05-14
+originalhref: fists.html
 ---
 <html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
 <P><img src="imgsclub/fists.gif" ALT="" align=left>
@@ -31,12 +32,5 @@ för att se den amerikanska grenens website.
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
 
-<TABLE WIDTH="100%">
-  <TR>
-    <TD colspan="2">
-     <IFRAME src="svdisc.html" width="100%">
-    </TD>
-  </TR>
-</TABLE>
-
+{% include translated.html %}
 </body></html>
