--- a/se-index.html
+++ b/se-index.html
@@ -1,6 +1,7 @@
 ---
 title: EUCW-sidorna på svenska
 translated: 2007-05-14
+originalhref: index.html
 ---
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <HTML>
@@ -174,17 +175,9 @@ AGCW 897</FONT>
 <TD align="RIGHT">
 <IMG src="imgs/agcwecm.gif" alt=""></TD>
 </TR>
-
-<TR>
-  <TD colspan="2">
-   <IFRAME src="svdisc.html" width="100%">
-  </TD>
-</TR>
-
-</TABLE>
 </TD>
 </TR>
 </TABLE>
+{% include translated.html %}
 </BODY>
 </HTML>
- 
