--- a/se-liaison.html
+++ b/se-liaison.html
@@ -1,5 +1,6 @@
 ---
 translated: 2007-05-14
+originalhref: liaison.html
 ---
 <HTML>
 <HEAD>
@@ -67,14 +68,7 @@ Argentina E-mail:...gacw (at_symbol) lan.no-ip.org...
 <HR>
 <a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
 
-<TABLE WIDTH="100%">
-  <TR>
-    <TD colspan="2">
-     <IFRAME src="svdisc.html" width="100%">
-    </TD>
-  </TR>
-</TABLE>
-
+{% include translated.html %}
 </BODY>
 </HTML>
 
