--- a/se-arci.html
+++ b/se-arci.html
@@ -1,5 +1,6 @@
 ---
 translated: 2007-05-14
+originalhref: arci.html
 ---
 <html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
 <center> <hr width="100%"> </center>
@@ -15,12 +16,6 @@ Det är en stor amerikansk klubb som ägnar sig åt lågeffekt-QRP.
 <center> <hr width="100%"> </center>
 <a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
 
-<TABLE WIDTH="100%">
-  <TR>
-    <TD colspan="2">
-     <IFRAME src="svdisc.html" width="100%">
-    </TD>
-  </TR>
-</TABLE>
+{% include translated.html %}
 
 </body></html>
