--- a/se-bqc.html
+++ b/se-bqc.html
@@ -1,5 +1,6 @@
 ---
 translated: 2007-05-14
+originalhref: bqc.html
 ---
 <html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
 <center> <hr width="100%"> </center>
@@ -22,12 +23,6 @@ Benelux QRP Club, Postbus 15, 2100 AA, Heemstede, Nederländerna
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
 
-<TABLE WIDTH="100%">
-  <TR>
-    <TD colspan="2">
-     <IFRAME src="svdisc.html" width="100%">
-    </TD>
-  </TR>
-</TABLE>
+{% include translated.html %}
 
 </body></html>
