--- a/se-eucons.html
+++ b/se-eucons.html
@@ -1,5 +1,6 @@
 ---
 translated: 2007-05-14
+originalhref: eucons.html
 ---
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
@@ -230,13 +231,6 @@ för en komplett lista av medlemsklubbar och dagen för deras medlemsskap</P>
 <a href="se-eucw.html"> Tillbaka </a> till listan över EUCW-klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
 
-<TABLE WIDTH="100%">
-  <TR>
-    <TD colspan="2">
-     <IFRAME src="svdisc.html" width="100%">
-    </TD>
-  </TR>
-</TABLE>
-
+{% include translated.html %}
 </body>
 </html>
