--- a/se-eucwa.html
+++ b/se-eucwa.html
@@ -1,5 +1,6 @@
 ---
 translated: 2007-05-14
+originalhref: eucwa.html
 ---
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <HTML>
@@ -129,13 +130,6 @@ E-mail:...joe (at-symbol) dk7vw.de...</P>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
 
-<TABLE WIDTH="100%">
-  <TR>
-    <TD colspan="2">
-     <IFRAME src="svdisc.html" width="100%">
-    </TD>
-  </TR>
-</TABLE>
-
+{% include translated.html %}
 </BODY>
 </HTML>
