--- a/se-eunov.html
+++ b/se-eunov.html
@@ -1,5 +1,6 @@
 ---
 translated: 2007-05-14
+originalhref: eunov.html
 ---
 <html>
 <head>
@@ -67,13 +68,6 @@ för att se diplomets utseende.
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
 
-<TABLE WIDTH="100%">
-  <TR>
-    <TD colspan="2">
-     <IFRAME src="svdisc.html" width="100%">
-    </TD>
-  </TR>
-</TABLE>
-
+{% include translated.html %}
 </body>
 </html>
