--- a/se-gacw.html
+++ b/se-gacw.html
@@ -1,5 +1,6 @@
 ---
 translated: 2007-05-14
+originalhref: gacw.html
 ---
 <html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
 <center> <hr width="100%"> </center>
@@ -49,13 +50,6 @@ E-mail:...gacw (AT-SYMBOL) lan.no-ip.org...
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
 
-<TABLE WIDTH="100%">
-  <TR>
-    <TD colspan="2">
-     <IFRAME src="svdisc.html" width="100%">
-    </TD>
-  </TR>
-</TABLE>
-
+{% include translated.html %}
 </body></html>
 
