--- a/se-gtc.html
+++ b/se-gtc.html
@@ -1,5 +1,6 @@
 ---
 translated: 2007-05-14
+originalhref: gtc.html
 ---
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
@@ -267,14 +268,7 @@ SV - CW - Medlemmar
 <a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
 </p>
 
-<TABLE WIDTH="100%">
-  <TR>
-    <TD colspan="2">
-     <IFRAME src="svdisc.html" width="100%">
-    </TD>
-  </TR>
-</TABLE>
-
+{% include translated.html %}
 </body>
 </html>
 
