--- a/se-inorc.html
+++ b/se-inorc.html
@@ -1,5 +1,6 @@
 ---
 translated: 2007-05-14
+originalhref: inorc.html
 ---
 <html>
 <BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
@@ -48,12 +49,5 @@ Email:...i1qod (at-tecknet) Lnet . it...
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
 
-<TABLE WIDTH="100%">
-  <TR>
-    <TD colspan="2">
-     <IFRAME src="svdisc.html" width="100%">
-    </TD>
-  </TR>
-</TABLE>
-
+{% include translated.html %}
 </body></html>
