--- a/se-iqrp.html
+++ b/se-iqrp.html
@@ -1,5 +1,6 @@
 ---
 translated: 2007-05-14
+originalhref: iqrp.html
 ---
 <html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
 <center> <hr width="100%"> </center>
@@ -23,12 +24,5 @@ Kontakt E-mail...i3ffe (at-symbol) quipo.it...
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
 
-<TABLE WIDTH="100%">
-  <TR>
-    <TD colspan="2">
-     <IFRAME src="svdisc.html" width="100%">
-    </TD>
-  </TR>
-</TABLE>
-
+{% include translated.html %}
 </body></html>
