--- a/se-rtc.html
+++ b/se-rtc.html
@@ -1,5 +1,6 @@
 ---
 translated: 2007-05-14
+originalhref: rtc.html
 ---
 <html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
 <center> <hr width="100%"> </center>
@@ -38,12 +39,5 @@ Tre diplom ges ut nämligen W-RTC-M, CWD, CWAA.
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
 
-<TABLE WIDTH="100%">
-  <TR>
-    <TD colspan="2">
-     <IFRAME src="svdisc.html" width="100%">
-    </TD>
-  </TR>
-</TABLE>
-
+{% include translated.html %}
 </body></html>
