--- a/se-ruqrp.html
+++ b/se-ruqrp.html
@@ -1,5 +1,6 @@
 ---
 translated: 2007-05-14
+originalhref: ruqrp.html
 ---
 <html><BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
 <center> <hr width="100%"> </center>
@@ -27,12 +28,5 @@ UE3QRP & RU9QRP/9  HQ-stationer
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
 
-<TABLE WIDTH="100%">
-  <TR>
-    <TD colspan="2">
-     <IFRAME src="svdisc.html" width="100%">
-    </TD>
-  </TR>
-</TABLE>
-
+{% include translated.html %}
 </body></html>
