Tydliggör vad som menas med de översättningen

--- a/se-liaison.html
+++ b/se-liaison.html
@@ -31,7 +31,7 @@ Förmat för listan (som är sortera i alfabetisk ordning):</P>
 
 <P><B>Klubbens ursprungliga namn,
 Engelska namnet om det finns och skiljer sig från det ursprungliga namnet
-(Det översatta namnet om översättaren klarar av det)</B><BR>
+(Den bokstavligen betydelsen av namnet om översättaren klarar av det)</B><BR>
 Klubbens typ<BR>
 Kontaktmannens anropssignal, namn, post och mailaddress
 <BR>
