--- a/se-eu160.html
+++ b/se-eu160.html
@@ -1,21 +1,4 @@
 ---
 originalhref: eu160.html
 ---
-<html>
-  <head>
-    <meta http-equiv="Refresh" content="20;http://www.agcw.org/eucw/d/Deu160.html">
-    <title>EUCW info hos SCAG</title>
-  </head>
-  <body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
-    <h1>Sidan är ännu ej översatt!</h1>
-    <p>
-Denna sida är ännu inte översatt till svenska.
-Om en liten stund förflyttas du därför automatiskt till
-<a href="http://www.agcw.org/eucw/d/Deu160.html">
-http://www.agcw.org/eucw/d/Deu160.html
-</a>
-(på tyska)
-som är den icke översatta versionen av samma sida.
-    </p>
-  </body>
-</html>
+{% include nottranslated.html %}
