Remove the reference to location on SCAG site

--- a/se-eucw.html
+++ b/se-eucw.html
@@ -5,7 +5,7 @@ originalhref: eucw.html
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <HTML>
 <HEAD>
-<TITLE>EUCW (hos SCAG)</TITLE>
+<TITLE>EUCW</TITLE>
 <LINK rel="SHORTCUT ICON" href="imgs/eucw.ico">
 </HEAD>
 <BODY bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink=
