--- a/se-index.html
+++ b/se-index.html
@@ -6,7 +6,7 @@ originalhref: index.html
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <HTML>
 <HEAD>
-<TITLE>EUCW-sidorna hos SCAG</TITLE>
+<TITLE>EUCW</TITLE>
 <META charset="UTF-8">
 <LINK rel="SHORTCUT ICON" href="imgs/eucw.ico">
 </HEAD>
@@ -63,8 +63,8 @@ size="+1" color="#FFFFFF">Handpumpsdag</FONT></A></P>
 </TD>
 <TD width="100%">
 <H1 align="center">Det europeiska CW-förbundet<BR>
- The European CW Association<BR>
- <FONT size="-1">den svenska översättningen av dessa sidor finns hos SCAG</FONT></H1>
+ The European CW Association
+</H1>
 
 <P align="left"><IMG src="flags/de.gif" width= "30" height="20"
 alt=""><A href="http://www.agcw.org/eucw/index.html">
