Rename to a status page

--- a/se-translation-status.html
+++ b/se-translation-status.html
@@ -1,8 +1,8 @@
 ---
-title: Translation order
+title: Swedish translation status
 translated: 2024-03-19
 ---
-<h1>Sidor att gå igenom</h1>
+<h1>Status of the Swedish translation</h1>
 
 <p>
 Ordningen är i första hand de med högst "priority", därefter lägre och
