Upload how this looks like at 2024-03-31

--- a/eucw.org/dormant.html
+++ b/eucw.org/dormant.html
@@ -47,7 +47,7 @@ GDR.
 
 <hr>
 <p><b><img src="f/de.gif" align="left" alt="DL:"><a href=
-"https://eucw.org/ylcwg.html">YLCWG</a> (Germany)</b></p>
+"ylcwg.html">YLCWG</a> (Germany)</b></p>
 <p><b>YLCWG Young Ladies CW Group</b><br>
 is temporarily inactive since 2016. A later revival is not excluded.
 
