--- a/eucw.org/euqrs.html
+++ b/eucw.org/euqrs.html
@@ -37,6 +37,9 @@
 &nbsp;
 <a href="cz-euqrs.html">
 <img src="f/cz.gif" width="30" height="20" alt="IT"></a>
+&nbsp;
+<a href="se-euqrs.html">
+<img src="f/se.gif" width="30" height="20" alt="IT"></a>
 <h3>GENERAL</h3>
 <p>The EuCW cordially invites all radio amateurs and SWLs to take
 part in the annual EuCW QRS Activity Week. This is not a contest,
