--- a/eucw.org/news.html
+++ b/eucw.org/news.html
@@ -28,7 +28,7 @@
 2022-09-09: August <a href="sl2208.txt"> Text </a> and <a href="sl2208.png"> Map </a>results of Snakes and Ladders.<p>
 2022-08-09: July <a href="sl2207.txt"> Text </a> and <a href="sl2207.png"> Map </a>results of Snakes and Ladders.<p>
 2022-07-09: <a href="euqrs22.html">Results</a> of the 2022 EUCW/AGCW QRS Week.<p> 
-2022-06-10: June <a href="sl2206.txt"> Text </a> and <a href="https://eucw.org/sl2206.png"> Map </a>results of Snakes and Ladders.<p>
+2022-06-10: June <a href="sl2206.txt"> Text </a> and <a href="sl2206.png"> Map </a>results of Snakes and Ladders.<p>
 2022-06-02: <a href="euqrs22.html">Results</a> of the 2022 EUCW/AGCW QRS Week.<p> 
 2022-06-10: May <a href="sl2205.txt"> Text </a> and <a href="sl2205.png"> Map </a>results of Snakes and Ladders.<p>
 2022-06-02: <a href="euqrs22.html">Results</a> of the 2022 EUCW/AGCW QRS Week.<p> 
@@ -64,7 +64,7 @@
 2020-09-09: August <a href="sl2008.txt">Text</a> and <a href="sl2008.png"> MAP</a> results of Snakes and Ladders.<P>
 2020-08-09: July <a href="sl2007.txt">Text</a> and <a href="sl2007.png"> MAP</a> results of Snakes and Ladders.<P>
 2020-07-10: Semester 1 and June <a href="sl2006.txt">Text</a> and <a href="sl2006.png"> MAP</a> results of Snakes and Ladders.<P>
-2020-06-12: May <a href="https://eucw.org/sl2005.txt">Text</a> and <a href="sl2005.png"> MAP</a> results of Snakes and Ladders.<P>
+2020-06-12: May <a href="sl2005.txt">Text</a> and <a href="sl2005.png"> MAP</a> results of Snakes and Ladders.<P>
 2020-06-05: <a href="euqrs20.html">Results</a> of the 2020 EUCW/AGCW QRS Week.<P>
 2020-05-09: Apr. <a href="sl2004.txt">Text</a> and <a href="sl2004.png"> MAP</a> results of Snakes and Ladders.<P>
 2020-04-08: Mar. <a href="sl2003.txt">Text</a> and <a href="sl2003.png"> MAP</a> results of Snakes and Ladders.<P>
