--- a/eucw.org/sl.html
+++ b/eucw.org/sl.html
@@ -180,7 +180,7 @@ V.3 Reps 2020-I:
 <a href="sl2002.txt">02</a>
 <a href="sl2003.txt">03</a>
 <a href="sl2004.txt">04</a>
-<a href="https://eucw.org/sl2005.txt">05</a> <a href="sl2006.txt">06</a> II: <a
+<a href="sl2005.txt">05</a> <a href="sl2006.txt">06</a> II: <a
 href=
 "sl2007.txt">07</a> <a href="sl2008.txt">08</a> <a href=
 "sl2009.txt">09</a> <a href="sl2010.txt">10</a> <a href=
@@ -232,7 +232,7 @@ href=
 <a href="sl2202.png">02</a>
 <a href="sl2203.png">03</a>
 <a href="sl2204.png">04</a> <a href="sl2205.png">05</a> <a href=
-"https://eucw.org/sl2206.png">06</a> II: <a href="sl2207.png">07</a> <a href=
+"sl2206.png">06</a> II: <a href="sl2207.png">07</a> <a href=
 "sl2208.png">08</a> <a href="sl2209.png">09</a> <a href=
 "sl2210.png">10</a> <a href="sl2211.png">11</a> <a href=
 "sl2212.png">12</a>
