Translated the page with the operating tips

--- a/se-op.html
+++ b/se-op.html
@@ -1,5 +1,138 @@
 ---
-priority: 8
 originalhref: op.html
+translated: 2024-03-31
 ---
-{% include nottranslated.html %}
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
+
+<html>
+<head>
+  <title>EUCW Tips för telegrafi-QSO</title>
+  <link rel="SHORTCUT ICON" href="eucw.ico">
+</head>
+
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink=
+"purple">
+  <table width="100%">
+    <tr>
+      <td align="left"><img src="eucwflag.gif" alt=""></td>
+
+      <td align="center">
+        <h3>Det europeiska CW-förbundet</h3>
+        <h1 align="center">EUCW tips för telegrafi-QSO</h1>
+        <h3 align="center">Telegrafi-QSO på olika språk</h3>
+      </td>
+
+      <td align="right"><img src="eucwflag.gif" alt=""></td>
+    </tr>
+  </table>
+<h2>Språkversioner av tips för hur man kör telegrafi:</H2>
+<h3>Senast uppdaterat 2016-09-21</h3>
+
+De är språken är de olika medlemsklubbarnas huvudspråk:
+<br>
+<img src="f/bg.gif" width="30" height="20" alt= "">
+BG bulgariska/<a href='dummy.html'>&#1041;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a>
+- frivilliga har inte hört av sig med förslag ännu
+<br>
+<img src="f/cz.gif" width="30" height="20" alt= "">
+CZ tjeckiska/
+<a href='dummy.html'>&#268;e&scaron;tina</a>
+- frivilliga har inte hört av sig med förslag ännu
+<br>
+<img src="f/de.gif" width="30" height="20" alt= "">
+DE tyska/<a href='op/dl/qso.html'>Deutsch</a> 
+sammanställt av DL1GBZ
+<br>
+<img src="f/gr.gif" width="30" height="20" alt= "">
+EL grekiska/
+<a href='dummy.html'>&Epsilon;&lambda;&lambda;&eta;&nu;&iota;&kappa;&#940;</a>
+- frivilliga har inte hört av sig med förslag ännu
+<br>
+<img src="f/uk.gif" width="30" height="20" alt= "">
+EN engelska/
+<a href='op/en/qso.html'>English</a>
+- sammanställt av G4FAD och DL1GBZ
+<br>
+<img src="f/es.gif" width="30" height="20" alt= "">
+ES spanska/<a href='op/es/qso.html'>Castellano</a>
+- sammanställt av LU6EF
+<br>
+<img src="f/fi.gif" width="30" height="20" alt= "">
+FI finska/<a href='op/fi/qso.html'>Suomi</a> 
+- sammanställt av OH7QR
+<br>
+<img src="f/fr.gif" width="30" height="20" alt= "">
+FR franska/<a href='op/fr/qso.html'>Fran&ccedil;ais</a> 
+- sammanställt av F6ENO 
+<br>
+<img src="f/hu.gif" width="30" height="20" alt= "">
+HU ungerska/<a href='dummy.html'>Magyar</a> 
+- frivilliga har inte hört av sig med förslag ännu
+<br>
+<img src="f/hr.gif" width="30" height="20" alt= "">
+HR kroatiska/<a href='dummy.html'>Hrvatski</a> - 
+- frivilliga har inte hört av sig med förslag ännu
+<br>
+<img src="f/it.gif" width="30" height="20" alt= "">
+IT italienska/<a href='op/it/qso.html'>Italiano</a>
+- sammanställt av I5SKK
+<br>
+<img src="f/mk.gif" width="30" height="20" alt= "">
+MK makedonska/<a
+href='dummy.html'>M&#1072;&#1082;&#1077;&#1076;&#1086;&#1085;&#1089;&#1082;&#1080;</a>
+- frivilliga har inte hört av sig med förslag ännu
+<br>
+<img src="f/nl.gif" width="30" height="20" alt= "">
+NL holländska/<a href='dummy.html'>Nederlands</a> 
+- frivilliga har inte hört av sig med förslag ännu
+<br>
+<img src="f/pl.gif" width="30" height="20" alt= "">
+PL polska/<a href='dummy.html'>Polski</a> 
+- frivilliga har inte hört av sig med förslag ännu
+<br>
+<img src="f/pt.gif" width="30" height="20" alt= "">
+PT portugisiska/<a href='dummy.html'>Portugu&ecirc;s</a>
+- frivilliga har inte hört av sig med förslag ännu
+<br>
+<img src="f/ru.gif" width="30" height="20" alt= "">
+RU ryska/<a 
+href='op/ru/qso.html'>&#1056;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;
+</a> 
+- sammanställt av UA9BA
+<br>
+<img src="f/se.gif" width="30" height="20" alt= "">
+SV svenska/<a href='op/sv/qso.html'>Svenska</a> 
+- sammanställt av SM6LRR
+<br>
+<img src="f/ua.gif" width="30" height="20" alt= "">
+UA ukrainska/<a
+href='dummy.html'>&#1059;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a>
+- frivilliga har inte hört av sig med förslag ännu
+<p>
+Övriga språk
+<p>
+<img src="f/eo.gif"  width="30" height="20" alt= "">
+EO <a href='op/eo/qso.html'>Esperanto</a>
+- sammanställt av DL1GBZ
+<p>
+<h3>Instruktioner för frivilliga</h3>
+<b>Viktigt</b> - Det är inte översättningar som önskas här.  Alla
+dessa texter ska skrivas på originalspråk.  Det är meningslöst att
+beskriva på svenska hur man genomför ett QSO till exempel på ryska.
+Det betyder att du kan anmäla dig som frivillig även om du inte
+förstår någon engelska.<br>
+
+<b>Format</b>: Använd inte någon speciell mall för denna
+sammanställning.  Inte heller lägger vi in EUCWs logotyp på dessa
+QSO-texter.  Använd vanlig enkel html-text.<br>
+
+Tänk på att all text på eucw.org tillhör public domain.
+<p>
+<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="dp.pdf"><FONT size="-2">Integritets-policy (ej översatt)</FONT></a>
+
+{% include translated.html %}
+
+</body>
+</html>
